--- a/package.json
+++ b/package.json
@@ -42,6 +42,13 @@
     "@angular-devkit/build-angular": "~0.1102.10",
     "@angular/cli": "~11.2.10",
     "@angular/compiler-cli": "~11.2.11",
+    "@progress/kendo-angular-excel-export": "^4.0.1",
+    "@progress/kendo-angular-grid": "^5.1.2",
+    "@progress/kendo-angular-pdf-export": "^3.0.1",
+    "@progress/kendo-common": "^0.2.1",
+    "@progress/kendo-data-query": "^1.5.5",
+    "@progress/kendo-file-saver": "^1.1.0",
+    "@progress/kendo-schematics": "^1.2.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
